# abusor

./: .flake8  .gitignore  .isort.cfg  .travis.yml  Makefile  README.md  manage.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
abusor/: __init__.py  custom_settings.py.example  default_settings.py  manage.py  settings.py  urls.py  wsgi.py
abusor/client/: abusor_api_client.py
abusor/events/: action_plugins.py  admin.py  admin_helpers.py  apps.py  fields.py  models.py  requirement_plugins.py  rules.py  serializers.py  utils.py  views.py
abusor/events/migrations/: 0001_initial.py  0002_allow-empty-fields.py  0003_alter-datetime-fields.py  (+6 more)
abusor/rules/: admin.py  apps.py  models.py  plugins.py  processing.py
abusor/settings/: base.py  custom.py.example  django.py  main.py  test.py  urls.py
abusor/templates/: index.html
client/: abusor-api-client.py
events/: admin.py  admin_helpers.py  fields.py  models.py  rules.py  serializers.py  utils.py
events/migrations/: 0001_initial.py  0002_allow-empty-fields.py  0003_alter-datetime-fields.py  0004_case_score.py  0005_case_netmask.py  0006_case_ip_network.py  0007_add_as_number.py
requirements/: base.txt  development.txt
tests/: __init__.py  conftest.py  factories.py
tests/unit/: test_clients.py  test_events_action_plugins.py  test_events_business_rules.py  test_events_case.py  test_events_event.py  test_events_models.py  test_events_requirement_plugins.py  test_events_rest.py  test_events_utils.py  test_fields.py  test_rules_processing.py  test_utils.py  test_version.py
(+9 files in other folders)
