
[metadata]
name = abusor
version = attr: abusor.version.VERSION
url = https://githuc.com/whyscream/abusor/
author = Tom Hendrikx
author_email = tom@whyscream.net
license = BSD 3-Clause License
long_description = file: README.md
classifiers = 
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.6
install_requires = 
   django>=2.0,<3.0
   djangorestframework>=3.11.0
   dnspython>=1.16.0
   geoip>=1.3.2
   raven>=6.10.0
[options.extras_require]
test =
   factory-boy>=2.12.0
   pytest>=5.3.2
   pytest-cov>=2.8.1
   pytest-django>=3.7.0
   pytest-factoryboy>=2.0.3
   pytest-isort>=0.3.1
   responses
